Get rid of deprecation warning in main integration test